logging/falco/elasticsearch-8-np.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: elasticsearch-access
  namespace: logging
spec:
  endpointSelector:
    matchLabels:
      k8s:common.k8s.elastic.co/type: elasticsearch
      k8s:elasticsearch.k8s.elastic.co/cluster-name: quickstart
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: logging
        k8s:common.k8s.elastic.co/type: kibana
        k8s:kibana.k8s.elastic.co/name: quickstart
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: logging
        k8s:common.k8s.elastic.co/type: logstash
        k8s:logstash.k8s.elastic.co/name: quickstart-logstash
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: elastic-system
        k8s:app.kubernetes.io/name: elastic-operator
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: falco
        k8s:app.kubernetes.io/name: falcosidekick
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: logging
        k8s:common.k8s.elastic.co/type: elasticsearch
        k8s:elasticsearch.k8s.elastic.co/cluster-name: quickstart
    toPorts:
    - ports:
      - port: "9300"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: logging
        k8s:common.k8s.elastic.co/type: elasticsearch
        k8s:elasticsearch.k8s.elastic.co/cluster-name: quickstart
    toPorts:
    - ports:
      - port: "9300"
        protocol: TCP
  - toEntities:
    - kube-apiserver
    - host
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
